--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -17,11 +17,17 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Montserrat, Arial, Helvetica, sans-serif;
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+}
+
+@layer components {
+  .boxed {
+    @apply px-10 mx-auto max-w-7xl w-full;
   }
 }
